//
// Copyright 2017 HyperHQ Inc.
// Copyright (c) 2019-2020 Ant Group
//
// SPDX-License-Identifier: Apache-2.0
//

syntax = "proto3";

//option go_package = "github.com/kata-containers/kata-containers/src/runtime/virtcontainers/pkg/agent/protocols/grpc";

import "oci.proto";

package  grpctls;
// unstable
service SecAgentService {
	rpc SecPauseContainer(SecPauseContainerRequest) returns (EmptyResponse);
	rpc SecResumeContainer(SecResumeContainerRequest) returns (EmptyResponse);

}

message SecPauseContainerRequest {
    string container_id = 1;
}

message SecResumeContainerRequest {
    string container_id = 1;
}

message EmptyResponse {}
